exports[`meetupFormReducer add_meetup 1`] = `
Object {
  "description": "",
  "end": "hourThree",
  "loading": true,
  "location": "",
  "name": "",
  "start": "hourTwo",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "hour",
  "voteStart": "thirtyMin",
}
`;

exports[`meetupFormReducer edit_meetup 1`] = `
Object {
  "description": "",
  "end": "hourThree",
  "loading": true,
  "location": "",
  "name": "",
  "start": "hourTwo",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "hour",
  "voteStart": "thirtyMin",
}
`;

exports[`meetupFormReducer meetupChange 1`] = `
Object {
  "description": "",
  "end": "hourThree",
  "location": "",
  "name": "",
  "start": "hourTwo",
  "state": "Pennsylvania",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "hour",
  "voteStart": "thirtyMin",
}
`;

exports[`meetupFormReducer set_vote 1`] = `
Object {
  "venues": Object {
    "123": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
    "venue": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
  },
}
`;

exports[`meetupFormReducer setCurrentMeetup 1`] = `
Object {
  "description": "test",
  "end": "hourThree",
  "location": "",
  "name": "test",
  "start": "hourTwo",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "hour",
  "voteStart": "thirtyMin",
}
`;
